--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -14,7 +14,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">订单修改</p>
+			<p  id="changeHeader" class="app_cf app_nav_text_center"></p>
 		</header>
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
@@ -211,9 +211,9 @@
 			
 		</div>
 		<div class="inSaveBtn">
-			<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">
+			<!--<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">
 				保存
-			</button>
+			</button>-->
 		</div>					
 		<div class="clear"></div>
 		<input type="hidden" id="supplierId"/>
