--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orAmend.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>最后时间：</label>
-				<input type="text" class="mui-input-clear" id="orLastDa" disabled>
+				<input type="date" class="mui-input-clear" id="orLastDa">
 			</div>
 			<div class="mui-input-row" id="orderTypebox">
 				<label>交货地点：</label>
@@ -38,6 +38,17 @@
 			        <input id="fromType2" type="radio" name="fromType" value="1"/ class="inputRadio">
 		        </div>	
 		    </div>
+		    <div class="mui-input-row" id="buyCenterId">
+				<label>采购中心：</label>
+				<div class="pre">
+					<input class="newinput newinput01" type="text" id="inOrordNum" placeholder="请选择采购中心">
+					<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAmend01"></span>
+					<div class="input_div01" style="display: none;"></div>					
+					<input class="savedata" type="hidden" value=''>
+					<div style="clear:both"></div>
+				</div>
+				<font>*</font>
+			</div>
 			<div class="mui-input-row remark">
 				<label>备注：</label>
 				<textarea id="orRemark" name="" rows="" cols="" disabled></textarea>
