--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -16,7 +16,7 @@
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
 			<p  id="changeHeader" class="app_cf app_nav_text_center"></p>
 		</header>
-		<div class="mui-content mui-input-group">
+		<div class="mui-content mui-input-group" id="payMents">
 			<div class="mui-input-row">
 				<label>订单编号：</label>
 				<input type="text" class="mui-input-clear" id="staPoordNum" disabled>
