--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="full-screen" content="yes">
 		<meta name="x5-fullscreen" content="true">
-		<title>订单查询</title>
+		<title>清单查询</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css?time=20181008" rel="stylesheet" />
 	</head>
@@ -15,7 +15,7 @@
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">订单查询</p>
+			<p class="app_cf app_nav_text_center">清单查询</p>
 		</header>
 		<div class="mui-content">
 			<form class="mui-input-group">
@@ -79,6 +79,16 @@
 					<label>待支付：</label>
 					<div class="pre">
 						<select class="secStyle" name="" id="wait_pay">
+							<option value="">请选择</option>
+							<option value="1">是</option>
+						</select>
+						<div style="clear:both"></div>
+					</div>
+				</div>
+				<div class="mui-input-row">
+					<label>可申请付款：</label>
+					<div class="pre">
+						<select class="secStyle" name="" id="apply_pay">
 							<option value="">请选择</option>
 							<option value="1">是</option>
 						</select>
