--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
@@ -9,7 +9,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>订单商品修改</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css?time=20180930" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20181023" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -125,6 +125,6 @@
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orDetailAmend.js"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orDetailAmend.js?time=20181023"></script>
 	</body>
 </html>
