--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orAmend.html
@@ -28,6 +28,7 @@
 			<div class="mui-input-row">
 				<label>最后时间：</label>
 				<input type="date" class="" id="orLastDa">
+				<font>*</font>
 			</div>
 			<div class="mui-input-row" id="orderTypebox">
 				<label>交货地点：</label>
@@ -87,7 +88,7 @@
 				<font>*</font>
 			</div>
 			<div class="mui-input-row">
-				<label>本次申请付款：</label>
+				<label>本次时间：</label>
 				<input type="text" class="mui-input-clear" id="orNowDate" disabled>
 			</div>
 			<!--审批流程块 有的话显示-->
