--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>订单列表</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css?time=20181008" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20181023" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="app_header mui-bar mui-bar-nav">
@@ -38,7 +38,7 @@
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderList.js"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderList.js?time=20181023"></script>
 
 	</body>
 </html>
