--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
@@ -9,7 +9,7 @@
 		<meta name="x5-fullscreen" content="true">
 		<title>订单查询</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20181023" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -129,7 +129,7 @@
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderListSearch.js"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderListSearch.js?time=20181023"></script>
 	</body>
 
 </html>
