--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderinfoAdd.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderinfoAdd.html
@@ -9,7 +9,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>订单商品信息添加</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css?time=20180930" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20181023" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -45,6 +45,6 @@
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderinfoAdd.js"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderinfoAdd.js?time=20181023"></script>
 	</body>
 </html>
