--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
@@ -21,7 +21,7 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>订单编号：</label>
-					<input type="text" class="inOrdNum" placeholder="请输入">
+					<input type="text" class="inOrdNum mui-input-clear" placeholder="请输入">
 				</div>
 				<div class="mui-input-row">
 					<label>订单状态：</label>
@@ -56,17 +56,18 @@
 				</div>
 				<div class="mui-input-row">
 					<label>经销店电话：</label>
-					<input type="text" class="inOrdPhone" placeholder="请输入">
+					<input type="text" class="inOrdPhone mui-input-clear" placeholder="请输入">
 				</div>
 				<div class="mui-input-row">
 					<label>商品货号：</label>
-					<input type="text" class="inItemNum" placeholder="请输入">
+					<input type="text" class="inItemNum mui-input-clear" placeholder="请输入">
 				</div>
 				<div class="mui-input-row">
 					<label>经销店名称：</label>
 					<div class="pre">
-						<input class="newinput" type="text" placeholder="请选择采购中心">
-						<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAdd"></span>
+						<input class="newinput mui-input-clear" type="text" placeholder="请选择采购中心">
+						<span class="mui-icon mui-icon-arrowup hideSpan app_cb3" id="hideSpanAdd"></span>
+						<span class="mui-icon mui-icon-arrowdown showSpan app_cb3" id="showSpanAdd"></span>
 						<div class="input_div" style="display: none;"></div>											
 						<input class="savedata" type="hidden" value=''>
 						<div style="clear:both"></div>
@@ -74,11 +75,11 @@
 				</div>
 				<div class="mui-input-row">
 					<label>采购中心：</label>
-					<input type="text" class="centersName" placeholder="请输入">
+					<input type="text" class="centersName mui-input-clear" placeholder="请输入">
 				</div>
 				<div class="mui-input-row">
 					<label>客户专员：</label>
-					<input type="text" class="conName" placeholder="请输入">
+					<input type="text" class="conName mui-input-clear" placeholder="请输入">
 				</div>
 				<div class="mui-input-row">
 					<label>待同意发货：</label>
