--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orAmend.html
@@ -42,13 +42,14 @@
 		    <div class="mui-input-row" id="buyCenterId">
 				<label>采购中心：</label>
 				<div class="pre">
-					<input class="newinput newinput01" type="text" id="inOrordNum" placeholder="请选择采购中心">
-					<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAmend01"></span>
+					<input class="newinput newinput01 mui-input-clear" type="text" id="inOrordNum" placeholder="请选择采购中心">
+					<span class="mui-icon mui-icon-arrowup hideSpan app_cb3" id="hideSpanAmend01"></span>
+					<span class="mui-icon mui-icon-arrowdown showSpan app_cb3" id="showSpanAmend01"></span>
 					<div class="input_div01" style="display: none;"></div>					
 					<input class="savedata" type="hidden" value=''>
 					<div style="clear:both"></div>
 				</div>
-				<font>*</font>
+				<!--<font>*</font>-->
 			</div>
 			<div class="mui-input-row remark">
 				<label>备注：</label>
