--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
@@ -26,8 +26,9 @@
 				<div class="mui-input-row">
 					<label>供应商：</label>
 					<div class="pre">
-						<input class="newinput" type="text" placeholder="请选择供应商" id="inSupply">
-						<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAdd"></span>
+						<input class="newinput mui-input-clear" type="text" placeholder="请选择供应商" id="inSupply">
+						<span class="mui-icon mui-icon-arrowup hideSpan app_cb3" id="hideSpanAdd"></span>
+						<span class="mui-icon mui-icon-arrowdown showSpan app_cb3" id="showSpanAdd"></span>
 						<div class="input_div" style="display: none;"></div>
 						<input class="savedata" type="hidden" value=''>
 					</div>
