--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
@@ -98,7 +98,7 @@
 	                    <input type="text" class="mui-input-clear" id="reqQty" disabled> 
 	                    </div></li></div></div>
 	                    <div class="buttonCont mui-row">
-	                    	<button type="submit" class="addSkuButton inAddBtn app_btn_search mui-btn-blue mui-btn-block">
+	                    	<button type="submit" id="SkuButton" class="addSkuButton inAddBtn app_btn_search mui-btn-blue mui-btn-block">
 	                    		删除
 	                    	</button>
 						</div>
