--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
@@ -65,7 +65,7 @@
 				<div class="mui-input-row">
 					<label>经销店名称：</label>
 					<div class="pre">
-						<input class="newinput mui-input-clear" type="text" placeholder="请选择采购中心">
+						<input class="newinput mui-input-clear" type="text" placeholder="请选择经销店">
 						<span class="mui-icon mui-icon-arrowup hideSpan app_cb3" id="hideSpanAdd"></span>
 						<span class="mui-icon mui-icon-arrowdown showSpan app_cb3" id="showSpanAdd"></span>
 						<div class="input_div" style="display: none;"></div>											
