--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -16,6 +16,12 @@
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
 			<p  id="changeHeader" class="app_cf app_nav_text_center"></p>
 		</header>
+		<nav class="mui-bar mui-bar-tab footClass" id="nav">
+			<a class="mui-tab-item app_cf ordList">
+				<span class="mui-icon mui-icon-list"></span>
+				<span class="mui-tab-label">订单列表</span>
+			</a>
+		</nav>
 		<div class="mui-content mui-input-group" id="payMents">
 			<div class="mui-input-row">
 				<label>订单编号：</label>
@@ -210,7 +216,7 @@
 			</div>
 			
 		</div>
-		<div class="inSaveBtn">
+		<div class="inSaveBtn" style="margin-bottom: 70px;">
 			<!--<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">
 				保存
 			</button>-->
