--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -18,7 +18,7 @@
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
 			<a class="mui-tab-item app_cf ordList">
-				<span class="mui-icon mui-icon-list"></span>
+				<span class="mui-icon mui-icon-undo"></span>
 				<span class="mui-tab-label">订单列表</span>
 			</a>
 		</nav>
