--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/payApplyList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/payApplyList.html
@@ -63,7 +63,7 @@
 			.payMoney {
 				width: 300px;
 				height: 300px;
-				border: solid 1px #40ABE9;
+				/*border: solid 1px #40ABE9;*/
 				background-color: #FFF;
 				position: absolute;
 				z-index: 105;
