--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -216,11 +216,8 @@
 			</div>
 			
 		</div>
-		<div class="inSaveBtn" style="margin-bottom: 70px;">
-			<!--<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">
-				保存
-			</button>-->
-		</div>					
+		<div class="inSaveBtn" style="margin-bottom: 70px;"></div>
+							
 		<div class="clear"></div>
 		<input type="hidden" id="supplierId"/>
 		<input type="hidden" name="ordId" id="ordId"/>
@@ -241,6 +238,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderAmend.js?v=20181026"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderAmend.js?v=20181029"></script>
 	</body>
 </html>
