--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
@@ -21,7 +21,7 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>清单编号：</label>
-					<input type="text" class="inOrdNum" placeholder="请输入备货单号">
+					<input type="text" class="inOrdNum" placeholder="请输入清单编号">
 				</div>
 				<div class="mui-input-row">
 					<label>供应商：</label>
