--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orDetails.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orDetails.html
@@ -70,6 +70,16 @@
 				<label>身份证：</label>
 				<div id="orSuppliercardID"></div>	
 			</div>
+			<div class="mui-row" id="orNumDate">
+				<div class="mui-input-row">
+					<label>申请金额：</label>
+					<input type="text" class="mui-input-clear" id="orApplyNum" disabled>
+				</div>
+				<div class="mui-input-row">
+					<label>本次时间：</label>
+					<input type="text" class="mui-input-clear" id="orNowDate" disabled>
+				</div>
+			</div>
 			<!--审批流程块 有的话显示-->
 			<div class="mui-input-row">
 				<div class="labelLf">审批流程：</div>
@@ -87,6 +97,6 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/orderMgmtJs/orDetails.js?time=20181023"></script>
+		<script src="../../js/orderMgmtJs/orDetails.js?time=20181030"></script>
 	</body>
 </html>
