线下支付订单

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrderUnlinemgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrderUnlinemgmtHtml/orderAmend.html
@@ -7,9 +7,9 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Cache-control" content="no-cache">
 		<meta http-equiv="Cache" content="no-cache">
-		<title>订单修改</title>
+		<title>线下支付订单修改</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css?time=20181023" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20181101" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -19,7 +19,7 @@
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
 			<a class="mui-tab-item app_cf ordList">
 				<span class="mui-icon mui-icon-undo"></span>
-				<span class="mui-tab-label">订单列表</span>
+				<span class="mui-tab-label">线下支付订单列表</span>
 			</a>
 		</nav>
 		<div class="mui-content mui-input-group" id="payMents">
@@ -238,6 +238,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderAmend.js?v=20181030"></script>
+		<script src="../../../js/orderMgmtJs/OrderUnlinemgmtHtmljs/orderAmend.js?v=20181101"></script>
 	</body>
 </html>
