--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
@@ -32,6 +32,7 @@
                 </ul>
 			</div>
 		</div>
+		<input type="hidden" name="myStatu" id="myStatu"/>
 		<input type="hidden" name="statu" id="statu"/>
 		<input type="hidden" name="source" id="source"/>
 		<input type="hidden" name="flag" id="flag"/>
