--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
@@ -17,7 +17,7 @@
 		<header class="app_header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
 		    <span id="OrdSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
-		    <p class="app_cf app_nav_text_center">订单列表</p>
+		    <p class="app_cf app_nav_text_center" id="listName"></p>
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
 			<a class="mui-tab-item app_cf staHomePage">
@@ -39,7 +39,7 @@
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderList.js?time=20181101"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderList.js?time=20181102"></script>
 
 	</body>
 </html>
