--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseDetail.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseDetail.html
@@ -21,8 +21,8 @@
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
 			<a class="mui-tab-item app_cf orderList">
-				<span class="mui-icon mui-icon-home"></span>
-				<span class="mui-tab-label">返回订单列表</span>
+				<span class="mui-icon mui-icon-undo"></span>
+				<span class="mui-tab-label" id="backCont"></span>
 			</a>
 		</nav>
 		<div class="mui-content mui-input-group">
@@ -55,6 +55,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/ordwaterCourseDetail.js?v=20181101"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/ordwaterCourseDetail.js?v=20181102"></script>
 	</body>
 </html>
