--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
@@ -18,7 +18,7 @@
 			<!--mui-action-back--> 
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf" id="back"></a>
 		    <span id="orWaterSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
-		    <p class="app_cf app_nav_text_center">线下支付流水列表</p>
+		    <p class="app_cf app_nav_text_center">支付流水列表</p>
 		</header>
 		<div class="app_content mui-content mui-scroll-wrapper" id="refreshContainer">			
 			<div class="mui-scroll">
