--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCouListSearch.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCouListSearch.html
@@ -19,11 +19,11 @@
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
 				<label>订单号：</label>
-				<input type="text" class="mui-input-clear" id="orWaterCouNumSc">
+				<input type="text" class="mui-input-clear" id="orWaterCouNumSc" placeholder="请输入订单号">
 			</div>
 			<div class="mui-input-row">
 				<label>流水号：</label>
-				<input type="text" class="mui-input-clear" id="waterCouNumSc">
+				<input type="text" class="mui-input-clear" id="waterCouNumSc" placeholder="请输入流水号">
 			</div>
 		</div>
 		<div class="SearchBtnClass">
