客户专员修改

--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -27,7 +27,7 @@
 				<input type="text" class="mui-input-clear" id="staPoordNum" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>经销店名称：</label>
+				<label id="customerName"></label>
 				<input type="text" class="mui-input-clear" id="staRelNum" disabled>
 			</div>
 			<div class="mui-input-row">
@@ -46,6 +46,10 @@
 			<div class="mui-input-row">
 				<label>运费：</label>
 				<input type="text" class="mui-input-clear" id="staFreight" disabled>
+			</div>
+			<div class="mui-input-row">
+				<label>万户币抵扣：</label>
+				<input type="text" class="mui-input-clear" id="staCoin" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>应付金额：</label>
@@ -74,6 +78,10 @@
 				<input type="text" id="staStatus" class="mui-input-clear doubleInput" disabled>
 			</div>
 			<div class="mui-input-row">
+				<label>结佣状态：</label>
+				<input type="text" class="mui-input-clear" id="commission" disabled>
+			</div>
+			<div class="mui-input-row">
 				<label>收货人：</label>
 				<input type="text" id="staConsignee" class="mui-input-clear" disabled>
 			</div>
@@ -87,7 +95,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>详细地址：</label>
-				<input type="text" id="staDateilAddress" class="mui-input-clear">
+				<input type="text" id="staDateilAddress" class="mui-input-clear" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
