--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -22,7 +22,7 @@
 				<input type="text" class="mui-input-clear" id="staPoordNum" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>经销店名称：</label>
+				<label id="customerName"></label>
 				<input type="text" class="mui-input-clear" id="staRelNum" disabled>
 			</div>
 			<div class="mui-input-row">
@@ -40,6 +40,10 @@
 			<div class="mui-input-row">
 				<label>运费：</label>
 				<input type="text" class="mui-input-clear" id="staFreight" disabled>
+			</div>
+			<div class="mui-input-row">
+				<label>万户币抵扣：</label>
+				<input type="text" class="mui-input-clear" id="staCoin" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>应付金额：</label>
@@ -66,6 +70,10 @@
 				<label>业务状态：</label>
 				<input type="text" class="mui-input-clear doubleInput app_cred3" id="staFinal" disabled>
 				<input type="text" class="mui-input-clear doubleInput" id="staStatus" disabled>
+			</div>
+			<div class="mui-input-row">
+				<label>结佣状态：</label>
+				<input type="text" class="mui-input-clear" id="commission" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>收货人：</label>
