--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
@@ -21,9 +21,13 @@
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
 			<a class="mui-tab-item app_cf staOrdStaBtn">
-				<span class="mui-icon mui-icon-undo"></span>
+				<span class="mui-icon mui-icon-list"></span>
 				<span class="mui-tab-label">客户专员列表</span>
 			</a>
+			<!--<a class="mui-tab-item app_cf staOrdListBtn">
+				<span class="mui-icon mui-icon-undo"></span>
+				<span class="mui-tab-label">订单列表</span>
+			</a>-->
 		</nav>
 		<div class="app_content mui-content mui-scroll-wrapper" id="refreshContainer">			
 			<div class="mui-scroll">
