--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -14,9 +14,6 @@
 		<title>经销店添加</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../../css/app.css?time=20180914" rel="stylesheet" />
-		<style type="text/css">
-			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 4.5em;top: 5px;}
-		</style>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -48,7 +45,7 @@
 			</div>
 			<div class="mui-input-row app_mb10" id="inAmendPoLastDaDiv">
 				<label class="commodityName">登录名：</label>
-				<input type="text" class="mui-input-clear commodityTxt" id="phpneId" placeholder="请输入">
+				<input type="text" class="mui-input-clear commodityTxt" id="phoneId" placeholder="请输入">
 				<font>*</font>
 			</div>
 		</div>
@@ -62,6 +59,6 @@
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/staffMgmtJs/relevanceJs/relAdd.js?v=20180914"></script>
+		<script src="../../../js/staffMgmtJs/relevanceJs/relAdd.js?v=20181106"></script>
 	</body>
 </html>
