客户专员修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
@@ -36,6 +36,8 @@
 		<input type="hidden" name="statu" id="statu"/>
 		<input type="hidden" name="source" id="source"/>
 		<input type="hidden" name="flag" id="flag"/>
+		<input type="text" name="userId" id="userId"/>
+		<input type="text" name="consultantId" id="consultantIda"/>
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
