--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
@@ -24,7 +24,7 @@
 				<input type="text" id="staPoordNum" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>经销店名称：</label>
+				<label id="customerName"></label>
 				<input type="text" id="staRelNum" disabled>
 			</div>
 			<div class="mui-input-row">
@@ -101,6 +101,10 @@
 				<label>业务状态：</label>
 				<input type="text" class="mui-input-clear doubleInput app_cred3" id="staFinal" disabled>
 				<input type="text" id="staStatus" class="mui-input-clear doubleInput" disabled>
+			</div>
+			<div class="mui-input-row">
+				<label>结佣状态：</label>
+				<input type="text" class="mui-input-clear" id="commission" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>收货人：</label>
